# ak_frame_extractor

./: .gitignore  README.md  TODO.md  activate.bat  activate_env.bat  ak_frame_extractor.py  ak_frame_extractor_main.bat  ak_frame_extractor_main.py  ak_frame_extractor_start.sh  build_pip.bat  build_win.bat  clean_build.bat  creating_env_ak_frame_extractor.sh  frame_extractor.bat  requirements_linux.txt  requirements_windows.txt  requirements_windows_02.txt  setup.cfg
data/DEMO_dataset/preprocessed_data/annotations/: 1080_07072022180443_0_0_C.csv  1080_07072022180443_0_1_C.csv  20210927_114012_k_r2_e_000_150_138_0_0_C.csv  (+1 more)
docs/: HEADER_CODE.txt  TODO.md  USER_MANUAL_ak_frame_extractor_v1.md  USER_MANUAL_ka_frame_extractor_v1.md
src/: TODO.md
src/ak_frame_extractor/: __main__.py
src/ak_frame_extractor.egg-info/: PKG-INFO
src/ak_frame_extractor/conf/: frames_extractor.conf  ui_frames_extractor.conf
src/dataset_management/: dataset_config.py  dataset_manager.py
src/dataset_management/test/: test_pascal_voc_parser.py
src/gui_frame_ext/: about_window.py  gui_frame_ext_config.py  gui_frame_ext_console.py  temporal_data.py
src/helpers/: helper_filesystem.py
src/video_extraction_management/: frame_extraction.py  frame_extraction_config.py
src/video_extraction_management/test/: test_frame_extraction.py  test_frame_extraction_config.py  test_ka_real_time_video_extraction_2.py  test_suite_video_management.py
tools/: README.md
tools/R_examples/: test_ak_simple_data_load.R
tools/matlab_examples/: test_ak_data_extracted.m  test_ak_simple_data_load.m  test_ka_data_extracted.m  test_ka_simple_data_load.m
tools/python_examples/: test_ak_data_extracted.py
win_exe_conf/: __main__.spec
(+14 files in other folders)
