[metadata]
name = ak_frame_extractor
version = 1.2
author = Juan Carlos Miranda, Jordi Gene-Mola, Jaume Arno, Eduard Gregorio
author_email = juancarlos.miranda@udl.cat, jordi.genemola@udl.cat, jaume.arno@udl.cat, eduard.gregorio@udl.cat
description = Python-based GUI tool to extract frames from video files produced with Azure Kinect cameras.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GRAP-UdL-AT/ak_frame_extractor
project_urls =
    Bug Tracker = https://github.com/GRAP-UdL-AT/ak_frame_extractor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pip==23.2.1
    altgraph==0.17.3
    build==0.10.0
    colorama==0.4.6
    future==0.18.3
    lxml==4.9.2
    numpy==1.24.2
    opencv-python==4.7.0.68
    packaging==23.0
    pandas==1.5.3
    pefile==2022.5.30
    pep517==0.12.0
    Pillow==9.4.0
    pyinstaller==5.7.0
    pyinstaller-hooks-contrib==2022.15
    pyk4a==1.5.0
    pyparsing==3.0.9
    python-dateutil==2.8.2
    python-version==0.0.2
    pytz==2022.7.1
    pywin32-ctypes==0.2.0
    scipy==1.10.1
    six==1.16.0
    tomli==2.0.1


[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.txt, *.rst, *.md
# Include any *.dat files found in the "data" subdirectory of the "my_app_name"
# package:
ak_frame_extractor = conf/*.conf
gui_frame_ext = assets/*.png
